# api

./: .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild.yaml  db_test.py  pyproject.toml
.github/workflows/: build.yml  coverage.yml  release.yml
src/api/: config.py  database.py  docs.py  models.py  server.py
src/api/endpoints/: rolldet.py
tests/: conftest.py  test_db.py  test_rest.http
tests/unit/: test_api.py
